Added attach to launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,17 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Attach to Python Functions",
+      "name": "Run and Attach to Python Functions",
       "type": "python",
       "request": "attach",
       "port": 9091,
       "preLaunchTask": "func: host start"
+    },
+    {
+      "name": "Attach to Python Functions",
+      "type": "python",
+      "request": "attach",
+      "port": 9091
     }
   ]
 }
